k8-manifests/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: jayyp2op/3-tier-user-platform-project:prod-4a7b890665508c4ce0df5df0d32b77e2c47cc711
        ports:
        - containerPort: 5000
